Library/AXL(Library)/Visual Basic/AXA.bas

'*****************************************************************************
'/****************************************************************************
'*****************************************************************************
'**
'** File Name
'** ----------
'**
'** AXA.BAS
'**
'** COPYRIGHT (c) AJINEXTEK Co., LTD
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Description
'** -----------
'** Ajinextek Analog Library Header File
'** 
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Source Change Indices
'** ---------------------
'** 
'** (None)
'**
'**
'*****************************************************************************
'*****************************************************************************
'**
'** Website
'** ---------------------
'**
'** http://www.ajinextek.com
'**
'*****************************************************************************
'*****************************************************************************
'*/
'

Attribute VB_Name = "AXA"

'========== Board and verification API group of module information =================================================================================
'Verify if AIO module exists
Public Declare Function AxaInfoIsAIOModule Lib "AXL.dll" (ByRef upStatus As Long) As Long


'Verify AIO module number
Public Declare Function AxaInfoGetModuleNo Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModulePos As Long, ByRef lpModuleNo As Long) As Long


'Verify the number of AIO module
Public Declare Function AxaInfoGetModuleCount Lib "AXL.dll" (ByRef lpModuleCount As Long) As Long


'Verify the number of input channels of specified module
Public Declare Function AxaInfoGetInputCount Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef lpCount As Long) As Long


'Verify the number of output channels of specified module
Public Declare Function AxaInfoGetOutputCount Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef lpCount As Long) As Long


'Verify the first channel number of specified module
Public Declare Function AxaInfoGetChannelNoOfModuleNo Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef lpChannelNo As Long) As Long


'Verify the first Input channel number of specified module (Inputmodule, Integration for input/output Module)
Public Declare Function AxaInfoGetChannelNoAdcOfModuleNo Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef lpChannelNo As Long) As Long


'Verify the first output channel number of specified module (Inputmodule, Integration for input/output Module)
Public Declare Function AxaInfoGetChannelNoDacOfModuleNo Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef lpChannelNo As Long) As Long


'Verify base board number, module position and module ID with specified module number
Public Declare Function AxaInfoGetModule Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef lpBoardNo As Long, ByRef lpModulePos As Long, ByRef upModuleID As Long) As Long


'Verify specified module board : Sub ID, module name, module description                                                                   <<<<<
'======================================================'
' support product : EtherCAT
' upModuleSubID        : EtherCAT SubID(for distinguish between EtherCAT modules)
' szModuleName            : model name of module(50 Bytes)
' szModuleDescription  : description of module(80 Bytes)
'======================================================'
Public Declare Function AxaInfoGetModuleEx Lib "AXL.dll" (ByVal lModuleNo As long, ByRef upModuleSubID As long, ByVal szModuleName As String, ByVal szModuleDescription As String) As Long


'Verify Module status of specified module board
Public Declare Function AxaInfoGetModuleStatus Lib "AXL.dll" (ByVal lModuleNo As Long) As Long


'========== API group of input module information search ====================================================================================
'Verify module number with specified input channel number
Public Declare Function AxaiInfoGetModuleNoOfChannelNo Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef lpModuleNo As Long) As Long


'Verify the number of entire channels of analog input module
Public Declare Function AxaiInfoGetChannelCount Lib "AXL.dll" (ByRef lpChannelCount As Long) As Long


'========== API group for setting and verifying of input module interrupt ============================================================
'Use window message, callback API or event method in order to get event message into specified channel. Use for the time of collection action( refer AxaStartMultiChannelAdc ) of continuous data by H/W timer
'(Timer Trigger Mode, External Trigger Mode)
'Use Windows message and callback function or event method to receive an interrupt message to the specified module.
'========= Interrupt-related function ======================================================================================
'The callback function method has the advantage that the event can be notified very quickly because the callback function is called immediately at the time of the occurrence of the event.
'But, The main process is stalled until the callback function is completely terminated.
'In other words, Care must be taken when there is work load in the callback function.
'The event method is a method of continuously detecting and processing the occurrence of an interrupt by using a thread.
'The event method has the disadvantage that system resources are occupied by thread, but it has the advantage that interrupts can be detected and processed the fastest.
'This method is not commonly used. but it is used when quick interrupt handling is main concern.
'The event method uses a specific thread to monitor the occurrence of an event, and it works independently of the main process.
'So, This is the recommended method because it enables the most efficient use of resources in a multiprocessor system.
'Use a Window message or callback function to receive interrupt message.
'(Message handle, Message ID, Callback function, Interrupt event)
'    hWnd        : Used to receive window handles and window messages. If not, enter NULL.
'    uMessage    : Massage of window handle. To not use this or use the default value, enter 0.
'    proc        : Pointer of the function to be called when an interrupt occurs. To not use this, enter NULL.
'    pEvent      : Event handling when using event method.
Public Declare Function AxaiEventSetChannel Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal hWnd As Long, ByVal uMesssage As Long, ByVal pProc As Long, ByRef pEvent As Long) As Long


'Set whether to use event in specified input channel
'======================================================'
' uUse       : DISABLE(0)   ' Event Disable
'            : ENABLE(1)    ' Event Enable
'======================================================'
Public Declare Function AxaiEventSetChannelEnable Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal uUse As Long) As Long


'Verify whether to use event in specified input channel
'======================================================'
' *upUse     : DISABLE(0)   ' Event Disable
'            : ENABLE(1)    ' Event Enable
'======================================================'
Public Declare Function AxaiEventGetChannelEnable Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef upUse As Long) As Long


'Set whether to use event in specified multiple input channels
'======================================================'
' lSize      : Number of input channel
' uUse       : DISABLE(0)' Event Disable
'            : ENABLE(1)    ' Event Enable
'======================================================'
Public Declare Function AxaiEventSetMultiChannelEnable Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByVal uUse As Long) As Long


'Set kind of event in specified input channel
'======================================================'
' uMask      : DATA_EMPTY(1)
'            : DATA_MANY(2)
'            : DATA_SMALL(3)
'            : DATA_FULL(4)
'======================================================'
Public Declare Function AxaiEventSetChannelMask Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal uMask As Long) As Long


'Verify kind of event in specified input channel
'======================================================'
' *upMask    : DATA_EMPTY(1)
'            : DATA_MANY(2)
'            : DATA_SMALL(3)
'            : DATA_FULL(4)
'======================================================'
Public Declare Function AxaiEventGetChannelMask Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef upMask As Long) As Long


'Set kind of event in specified multiple input channels
'=============================================================================='
' uMask      : DATA_EMPTY(1)
'            : DATA_MANY(2)
'            : DATA_SMALL(3)
'            : DATA_FULL(4)
'=============================================================================='
Public Declare Function AxaiEventSetMultiChannelMask Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByVal uMask As Long) As Long


'Verify event occurrence position
'=============================================================================='
' *upMode    : AIO_EVENT_DATA_UPPER(1)
'            : AIO_EVENT_DATA_LOWER(2)
'            : AIO_EVENT_DATA_FULL(3)
'            : AIO_EVENT_DATA_EMPTY(4)
'=============================================================================='
Public Declare Function AxaiEventRead Lib "AXL.dll" (ByRef lpChannelNo As Long, ByRef upMode As Long) As Long


'Set interrupt mask of specified module. (SIO-AI4RB is not supportive.)
'=================================================================================================='
' uMask      : SCAN_END(1)
'            : FIFO_HALF_FULL(2)
'=================================================================================================='
Public Declare Function AxaiInterruptSetModuleMask Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal uMask As Long) As Long


'Verify interrupt mask of specified module
'=================================================================================================='
' *upMask    : SCAN_END(1)
'            : FIFO_HALF_FULL(2)
'=================================================================================================='
Public Declare Function AxaiInterruptGetModuleMask Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef upMask As Long) As Long


'========== API group for setting and verifying of input module parameter ========================================================================
'Set the input voltage range in specified input channel
'=================================================================================================='
' AI4RB
' dMinVolt    : -10V/-5V/0V
' dMaxVolt    : 10V/5V/
'
' AI16Hx
' dMinVolt    : -10V Fix
' dMaxVolt    : 10V Fix
'=================================================================================================='
Public Declare Function AxaiSetRange Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dMinVolt As Double, ByVal dMaxVolt As Double) As Long


'Verify the input voltage range in specified input channel
'=================================================================================================='
' AI4RB
' *dpMinVolt  : -10V/-5V/0V
' *dpMaxVolt  : 10V/5V/
'
' AI16Hx
' *dpMaxVolt  : -10V Fix
' *dpMaxVolt  : 10V Fix
'=================================================================================================='
Public Declare Function AxaiGetRange Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dpMinVolt As Double, ByRef dpMaxVolt As Double) As Long

